feat(sticky footer): js solution lead ... to be structured and finalised

--- a/fxj_alpha.libraries.yml
+++ b/fxj_alpha.libraries.yml
@@ -17,3 +17,4 @@ bootstrap-scripts:
     bootstrap/javascripts/bootstrap/scrollspy.js: {}
     bootstrap/javascripts/bootstrap/tab.js: {}
     bootstrap/javascripts/bootstrap/transition.js: {}
+    js/main.js: {}
