--- a/fxj_alpha.info.yml
+++ b/fxj_alpha.info.yml
@@ -12,6 +12,7 @@ regions:
   header: 'Top Bar'
   highlighted: 'Highlighted'
   help: 'Help'
+  slider: 'Slider'
   content: 'Content'
   sidebar_first: 'Primary'
   sidebar_second: 'Secondary'
